# AnalyzWEB

./: .gitignore  App.py  CODE_OF_CONDUCT.MD  README.md  SECURITY.md  apps.py  docs.py  main.py  pyproject.toml  requeriments.txt  requirements.txt  tempCodeRunnerFile.py  users.db
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: python-app.yml
apps/: __init__.py
components/: data_analysis.py  functions.py
controller/: data_analysis_controller.py  functions.py
dataframe/: __init__.py
nicegui-example/: README.md  main.py
pages/: DataAnalysis.py
streamlit-example/: README.md  main.py
views/: data_analysis_tab.py  data_analysis_view.py
